Sun Jun 10 18:01:21 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/DomainParticipantManager.h:
        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
          Added explicit close method to the dpm, at the moment there are
          no domain participants registered this method will shutdown DDS
          interaction completely. This should improve shutdown with OpenDDS

Sun Jun 10 10:41:08 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp:
          Reverted removal of include, needed to compare the instance handle

Fri Jun  8 18:01:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp:
          Removed not needed include

Fri Jun  8 18:00:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SLManyByMany/Receiver/SL_ManyByMany_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/SLOneByOne/Receiver/SL_OneByOne_Receiver_exec.cpp:
          Count on deletion events

Fri Jun  8 17:42:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Set default discovery to rtps

Fri Jun  8 17:26:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
          Shutdown dds vendor when we don't have any dp's anymore

Fri Jun  8 13:01:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
        * connectors/dds4ccm/impl/ConditionManager.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
          Simplified the condition manager and getter by using the
          get_trigger_status call on the condition. The condition manager